# User-service

./: .gitignore  README.md  desktop.ini  docker-compose.yaml  pyproject.toml  user_service.db
openapi/: openapi.yaml
src/user_service/: bootstrap.py  config.py  views.py
src/user_service/adapters/: orm.py  repository.py
src/user_service/domains/: __init__.py  commands.py  events.py  models.py
src/user_service/entrypoints/: app.py  dependencies.py  fastapi_app.py  flask_app.py  schemas.py
src/user_service/entrypoints/rest/: dependencies.py  fastapi_app.py
src/user_service/entrypoints/rest/routers/: friend.py  friends.py  login.py  register.py  reset_password.py  user.py
src/user_service/entrypoints/routers/: friends.py  login.py  register.py  reset_password.py  user.py
src/user_service/entrypoints/schemas/: friend_schemas.py  login_schemas.py  register_schemas.py  reset_password_schemas.py  user_schemas.py
src/user_service/service_layer/: handlers.py  message_bus.py  unit_of_work.py
src/user_service/service_layer/handlers/: command.py  event.py
tests/: conftest.py  random_refs.py
tests/e2e/: test_api.py
tests/e2e/api/: test_2fa.py  test_friend.py  test_login.py  test_register.py  test_reset_password.py  test_user.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_handlers.py
user_service/: app.py
user_service/adapters/: orm.py
user_service/domains/: models.py
user_service/entrypoints/: app.py
user_service/tests/unit/: test_validate_password.py
